reworked options page

--- a/options.html
+++ b/options.html
@@ -6,8 +6,14 @@
     <script src="options.js" defer></script>
   </head>
   <body>
-    <button id=test>Test</test>
-    <div id=log></div>
+    <ol>
+      <li><button id="host">Download native host</button></li>
+      <li><input id="path" type="text"/></li>
+      <li><button id="manifest" disabled="true">
+        Download native host manifest
+      </button></li>
+      <li><p id="result">Waiting for response ...</p></li>
+    </ol>
   </body>
 </html>
 
