--- a/options.html
+++ b/options.html
@@ -12,8 +12,7 @@
       <li><button id="manifest" disabled="true">
         Download native host manifest
       </button></li>
-      <li><p id="result">Waiting for response ...</p></li>
+      <li><ol id="log"></ol></li>
     </ol>
   </body>
 </html>
-
