--- a/options.html
+++ b/options.html
@@ -12,7 +12,8 @@
       <li><button id="manifest" disabled="true">
         Download native host manifest
       </button></li>
-      <li><ol id="log"></ol></li>
     </ol>
+    <button id="test">Test</button>
+    <div id="log"></div>
   </body>
 </html>
