add polyfill properly

--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset=utf-8>
     <title>monkeywrench Popup</title>
+    <script src="browser-polyfill.js"></script>
     <script src="popup.js" defer></script>
     <link rel="stylesheet" href="popup.css"/>
   </head>
